Changelog
=========

0.0.2 (unreleased)
------------------

- Nothing changed yet.


0.0.1 (2012-03-16)
------------------

- Fix packaging


0.0.0 (2012-03-16)
------------------

- Initial release.
